--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Comparison Virus</title>
     <link rel="stylesheet" href="style.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lato:wght@400;700&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -51,6 +52,10 @@
                         <strong>Mental Health Impact:</strong> Contributes to imposter syndrome and depression.
                         <blockquote>"Despite accomplishments, I feel I don't deserve to be here, comparing to 'smarter' people."</blockquote>
                     </li>
+                    <li>
+                        <strong>Decision Paralysis:</strong> Fear of making the 'wrong' choice compared to peers.
+                        <blockquote>"I can't pick a major because I don't know which one 'looks' as good as my friends' choices."</blockquote>
+                    </li>
                 </ul>
             </section>
 
@@ -82,12 +87,16 @@
                         <strong>Inspiring Role Models:</strong> Successful peers serve as relatable role models.
                         <blockquote>"Senior's journey to top grad school motivates me, knowing it's possible."</blockquote>
                     </li>
+                    <li>
+                        <strong>Discovering Interests:</strong> Seeing peers try new things can expose you to new passions.
+                        <blockquote>"I only joined the coding club after seeing my roommate's project; I love it now."</blockquote>
+                    </li>
                 </ul>
             </section>
 
         </div> 
 
-        <section id="amplifiers" class="card full-width">
+        <section id="amplifiers" class="card">
             <h2>The Amplifiers: How Context Shapes Comparison</h2>
             <p class="key-message">External factors intensify or mediate comparison's effects.</p>
             
@@ -103,6 +112,10 @@
                 <li>
                     <strong>Personal Disposition:</strong> Individual traits and coping mechanisms shape reactions to comparison.
                     <blockquote>"Some thrive on competition, others find it crippling; internal dialogue is key."</blockquote>
+                </li>
+                <li>
+                    <strong>Institutional Pressure:</strong> Systems like grading curves or rankings force direct comparison.
+                    <blockquote>"Being graded on a curve means I'm not just learning; I'm actively competing with friends."</blockquote>
                 </li>
             </ul>
         </section>
