--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Comparison Virus</title>
+    <title>The Comparison Virus — IIT Kharagpur Edition</title>
     <link rel="stylesheet" href="style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lato:wght@400;700&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+    <!-- Meta for sharing (kept minimal) -->
+    <meta name="description" content="A student-led study on IIT Kharagpur's comparison culture — how it motivates and overwhelms. Findings, student voices, and coping strategies." />
+    <meta name="keywords" content="IIT Kharagpur, comparison, CGPA, DepC, placements, internships, mental health, student life" />
 </head>
 <body>
 
@@ -18,10 +22,15 @@
             <p class="intro-hook">Since time immemorial, humans have looked to others to gauge their standing. In today's interconnected world, this deep tendency, felt acutely on campus, takes on new significance.</p>
             <p class="intro-define">This 'Comparison Virus' is the pervasive urge to evaluate ourselves against peers in grades, achievements, internships, and social recognition.</p>
             <p class="intro-question"><strong>Is this constant assessment a silent motivator, or a source of profound misery?</strong> Our study investigates this dual nature, understanding how comparisons shape mental well-being on campus, amplified by social media.</p>
+
+            <!-- NEW: brief IIT Kharagpur context; matches existing typography -->
+            <p class="intro-define"><strong>IIT Kharagpur context:</strong> Students reported frequent comparison hotspots — CGPA &amp; <em>DepC</em> discussions, society selections and Tech GC outcomes, 3rd‑year internship races, high‑visibility LinkedIn wins, and the placement‑season scoreboard. The insights below summarise responses from our campus questionnaire.</p>
         </div>
     </header>
 
     <main class="container">
+
+
         <div class="dual-comparison">
 
             <section id="motivation" class="card">
@@ -34,27 +43,27 @@
                 <ul>
                     <li>
                         <strong>Goal Setting & Ambition:</strong> Peer achievements ignite ambition, setting clear benchmarks.
-                        <blockquote>"Friend's amazing internship pushed me to polish my resume and apply."</blockquote>
+                        <blockquote>"Friend's Dream-11 style internship pushed me to polish my resume and apply."</blockquote>
                     </li>
                     <li>
                         <strong>Performance Enhancement:</strong> Observing success inspires better habits and strategies.
-                        <blockquote>"Classmate's high scores led me to ask about their techniques; it helped me improve."</blockquote>
+                        <blockquote>"A classmate’s 9+ CGPA study routine helped me tighten my prep."</blockquote>
                     </li>
                     <li>
-                        <strong>Social Learning:</strong> Comparison guides efforts by understanding what's 'achievable.'
-                        <blockquote>"Knowing peer involvement helps me gauge expectations and plan my activities."</blockquote>
+                        <strong>Social Learning:</strong> Comparison guides efforts by understanding what's 'achievable' in KGP’s context.
+                        <blockquote>"Seniors’ POR journeys helped me plan which societies and GCs to target."</blockquote>
                     </li>
                     <li>
                         <strong>Validation & Belonging:</strong> Favorable comparison reinforces competence and positive self-perception.
-                        <blockquote>"Grades on par with successful peers make me feel capable and that I belong."</blockquote>
+                        <blockquote>"Wing outcomes similar to mine made me feel I truly belong here."</blockquote>
                     </li>
                     <li>
                         <strong>Inspiring Role Models:</strong> Successful peers serve as relatable role models.
-                        <blockquote>"Senior's journey to top grad school motivates me, knowing it's possible."</blockquote>
+                        <blockquote>"A senior’s route to top grad school made it feel possible for me too."</blockquote>
                     </li>
                     <li>
                         <strong>Discovering Interests:</strong> Seeing peers try new things can expose you to new passions.
-                        <blockquote>"I only joined the coding club after seeing my roommate's project; I love it now."</blockquote>
+                        <blockquote>"I joined the coding club after seeing my roommate's project; I love it now."</blockquote>
                     </li>
                 </ul>
             </section>
@@ -69,19 +78,19 @@
                 <ul>
                     <li>
                         <strong>Anxiety & Stress:</strong> Constant measurement fuels worry about not being 'good enough.'
-                        <blockquote>"Scrolling through LinkedIn makes me anxious; everyone else is ahead."</blockquote>
+                        <blockquote>"LinkedIn during placements makes me panic; everyone seems ahead."</blockquote>
                     </li>
                     <li>
                         <strong>Lowered Self-Esteem:</strong> Perceived deficiencies erode self-confidence and foster inadequacy.
-                        <blockquote>"Friends with perfect CGPAs make my efforts feel insufficient."</blockquote>
+                        <blockquote>"Friends with near-perfect CGPAs make my effort feel invisible."</blockquote>
                     </li>
                     <li>
                         <strong>Envy & Isolation:</strong> Comparison breeds negative emotions, damaging connections.
-                        <blockquote>"Hard to celebrate friends' successes when secretly wishing I had what they have."</blockquote>
+                        <blockquote>"It's tough to celebrate others when I'm secretly comparing outcomes."</blockquote>
                     </li>
                     <li>
                         <strong>Burnout & Exhaustion:</strong> Pressure to 'keep up' leads to unsustainable pace.
-                        <blockquote>"Exhausted trying to match everyone's extracurriculars; always running on empty."</blockquote>
+                        <blockquote>"I'm drained trying to match everyone’s societies and projects."</blockquote>
                     </li>
                     <li>
                         <strong>Mental Health Impact:</strong> Contributes to imposter syndrome and depression.
@@ -89,9 +98,17 @@
                     </li>
                     <li>
                         <strong>Decision Paralysis:</strong> Fear of making the 'wrong' choice compared to peers.
-                        <blockquote>"I can't pick a major because I don't know which one 'looks' as good as my friends' choices."</blockquote>
+                        <blockquote>"Stuck choosing electives because I worry what looks the ‘best.’"</blockquote>
                     </li>
                 </ul>
+
+                <!-- NEW: Collapsible anonymous student voices (native details/summary) -->
+                <details>
+                    <summary><strong>Student Voices (Anonymous)</strong></summary>
+                    <blockquote>"Wing chats after exam results spike my anxiety."</blockquote>
+                    <blockquote>"KGP Confessions and Insta stories amplify FOMO after every big announcement."</blockquote>
+                    <blockquote>"DepC discussions in first year made me obsess over grades vs. learning."</blockquote>
+                </details>
             </section>
 
         </div> 
@@ -103,7 +120,7 @@
             <ul>
                 <li>
                     <strong>Social Media:</strong> Curated realities create skewed comparisons, intensifying inadequacy.
-                    <blockquote>"Everyone's travel photos make my student life feel boring and unproductive."</blockquote>
+                    <blockquote>"Everyone's travel or internship posts make my semester feel mediocre."</blockquote>
                 </li>
                 <li>
                     <strong>Peer Culture:</strong> Competitive campus culture amplifies both motivational and detrimental comparisons.
@@ -120,12 +137,28 @@
             </ul>
         </section>
 
+        <!-- NEW: Coping strategies (same card style) -->
+        <section id="coping" class="card">
+            <h2>Turning Awareness into Action: Coping with Comparison</h2>
+            <p class="key-message">Practical strategies you can try during internships, placements, or DepC seasons.</p>
+            <ul>
+                <li><strong>Mindful Noticing:</strong> Catch comparison as it occurs; name it without judgment.</li>
+                <li><strong>Progress over Optics:</strong> Track your own weekly progress rather than others’ outcomes.</li>
+                <li><strong>Digital Hygiene:</strong> Mute triggering feeds during crunch periods; set usage windows.</li>
+                <li><strong>Peer Support:</strong> Normalize honest check-ins in hostels and societies; create “authenticity hours.”</li>
+                <li><strong>Role Model Audit:</strong> Follow seniors who share process, not just outcomes.</li>
+                <li><strong>Help-Seeking:</strong> Reach out to the Counselling Centre, faculty advisors, or trusted peers early.</li>
+            </ul>
+        </section>
+
     </main>
 
     <footer>
         <div class="container">
             <h3>Reflecting on the "Virus"</h3>
             <p>The 'Comparison Virus' is intrinsic to human experience, especially on campus. Recognizing its dual potential—to inspire or to inhibit—is the first step towards conscious navigation and genuine well-being.</p>
+            <!-- NEW: succinct reflective closer tailored to KGP -->
+            <p><em>Maybe the race was never against others, but against yesterday’s version of ourselves.</em></p>
         </div>
     </footer>
 
