--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Meta for sharing (kept minimal) -->
     <meta name="description" content="A student-led study on IIT Kharagpur's comparison culture — how it motivates and overwhelms. Findings, student voices, and coping strategies." />
-    <meta name="keywords" content="IIT Kharagpur, comparison, CGPA, DepC, placements, internships, mental health, student life" />
+    <meta name="keywords" content="IIT Kharagpur, comparison, CGPA, Academics, placements, internships, mental health, student life" />
 </head>
 <body>
 
@@ -24,7 +24,7 @@
             <p class="intro-question"><strong>Is this constant assessment a silent motivator, or a source of profound misery?</strong> Our study investigates this dual nature, understanding how comparisons shape mental well-being on campus, amplified by social media.</p>
 
             <!-- NEW: brief IIT Kharagpur context; matches existing typography -->
-            <p class="intro-define"><strong>IIT Kharagpur context:</strong> Students reported frequent comparison hotspots — CGPA &amp; <em>DepC</em> discussions, society selections and Tech GC outcomes, 3rd‑year internship races, high‑visibility LinkedIn wins, and the placement‑season scoreboard. The insights below summarise responses from our campus questionnaire.</p>
+            <p class="intro-define"><strong>IIT Kharagpur context:</strong> Students reported frequent comparison hotspots — CGPA &amp; <em>Double Major</em> discussions, society selections and Tech GC outcomes, 3rd‑year internship races, high‑visibility LinkedIn wins, and the placement‑season scoreboard. The insights below summarise responses from our campus questionnaire.</p>
         </div>
     </header>
 
@@ -107,7 +107,7 @@
                     <summary><strong>Student Voices (Anonymous)</strong></summary>
                     <blockquote>"Wing chats after exam results spike my anxiety."</blockquote>
                     <blockquote>"KGP Confessions and Insta stories amplify FOMO after every big announcement."</blockquote>
-                    <blockquote>"DepC discussions in first year made me obsess over grades vs. learning."</blockquote>
+                    <blockquote>"Double Major discussions in first year made me obsess over grades vs. learning."</blockquote>
                 </details>
             </section>
 
@@ -140,7 +140,7 @@
         <!-- NEW: Coping strategies (same card style) -->
         <section id="coping" class="card">
             <h2>Turning Awareness into Action: Coping with Comparison</h2>
-            <p class="key-message">Practical strategies you can try during internships, placements, or DepC seasons.</p>
+            <p class="key-message">Practical strategies you can try during internships, placements, or exam seasons.</p>
             <ul>
                 <li><strong>Mindful Noticing:</strong> Catch comparison as it occurs; name it without judgment.</li>
                 <li><strong>Progress over Optics:</strong> Track your own weekly progress rather than others’ outcomes.</li>
