--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="intro-question"><strong>Is this constant assessment a silent motivator, or a source of profound misery?</strong> Our study investigates this dual nature, understanding how comparisons shape mental well-being on campus, amplified by social media.</p>
 
             <!-- NEW: brief IIT Kharagpur context; matches existing typography -->
-            <p class="intro-define"><strong>IIT Kharagpur context:</strong> Students reported frequent comparison hotspots — CGPA &amp; <em>Double Major</em> discussions, society selections and Tech GC outcomes, 3rd‑year internship races, high‑visibility LinkedIn wins, and the placement‑season scoreboard. The insights below summarise responses from our campus questionnaire.</p>
+            <p class="intro-define"><strong>IIT Kharagpur context:</strong> Students reported frequent comparison hotspots — CGPA &amp; <em>Double Major</em> discussions, society selections and GC outcomes, 3rd‑year internship races, high‑visibility LinkedIn wins, and the placement‑season scoreboard. The insights below summarise responses from our campus questionnaire.</p>
         </div>
     </header>
 
