--- a/index.html
+++ b/index.html
@@ -10,20 +10,51 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lato:wght@400;700&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <!-- Meta for sharing (kept minimal) -->
     <meta name="description" content="A student-led study on IIT Kharagpur's comparison culture — how it motivates and overwhelms. Findings, student voices, and coping strategies." />
     <meta name="keywords" content="IIT Kharagpur, comparison, CGPA, Academics, placements, internships, mental health, student life" />
+
+    <style>
+        .author-list {
+            font-family: 'Lato', sans-serif;
+            font-size: 1.1rem;
+            text-align: center; /* You can adjust this */
+            line-height: 1.6;
+            color: #eee; /* Light color to match header */
+            margin-top: 10px;
+            margin-bottom: 25px;
+        }
+        
+        /* Style for the new h2, if needed */
+        header h2 {
+            font-family: 'Fredoka One', cursive; /* Matches h1 font */
+            font-size: 2.2rem;
+            color: #fff;
+            text-align: center;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-weight: 400; /* Fredoka One is usually bold anyway */
+        }
+    </style>
 </head>
 <body>
 
     <header class="banner">
         <div class="container">
             <h1>The "Comparison Virus": Between Motivation and Misery</h1>
+            
+            <h2>Cognitive Resonance</h2>
+            <p class="author-list">
+                Aryan Arora<br>
+                Kunal Patil<br>
+                Flora<br>
+                Himanshu<br>
+                Prabhanjan<br>
+                Saksham
+            </p>
             <p class="intro-hook">Since time immemorial, humans have looked to others to gauge their standing. In today's interconnected world, this deep tendency, felt acutely on campus, takes on new significance.</p>
             <p class="intro-define">This 'Comparison Virus' is the pervasive urge to evaluate ourselves against peers in grades, achievements, internships, and social recognition.</p>
             <p class="intro-question"><strong>Is this constant assessment a silent motivator, or a source of profound misery?</strong> Our study investigates this dual nature, understanding how comparisons shape mental well-being on campus, amplified by social media.</p>
 
-            <!-- NEW: brief IIT Kharagpur context; matches existing typography -->
             <p class="intro-define"><strong>IIT Kharagpur context:</strong> Students reported frequent comparison hotspots — CGPA &amp; <em>Double Major</em> discussions, society selections and GC outcomes, 3rd‑year internship races, high‑visibility LinkedIn wins, and the placement‑season scoreboard. The insights below summarise responses from our campus questionnaire.</p>
         </div>
     </header>
@@ -102,7 +133,6 @@
                     </li>
                 </ul>
 
-                <!-- NEW: Collapsible anonymous student voices (native details/summary) -->
                 <details>
                     <summary><strong>Student Voices (Anonymous)</strong></summary>
                     <blockquote>"Wing chats after exam results spike my anxiety."</blockquote>
@@ -137,7 +167,6 @@
             </ul>
         </section>
 
-        <!-- NEW: Coping strategies (same card style) -->
         <section id="coping" class="card">
             <h2>Turning Awareness into Action: Coping with Comparison</h2>
             <p class="key-message">Practical strategies you can try during internships, placements, or exam seasons.</p>
@@ -157,7 +186,6 @@
         <div class="container">
             <h3>Reflecting on the "Virus"</h3>
             <p>The 'Comparison Virus' is intrinsic to human experience, especially on campus. Recognizing its dual potential—to inspire or to inhibit—is the first step towards conscious navigation and genuine well-being.</p>
-            <!-- NEW: succinct reflective closer tailored to KGP -->
             <p><em>Maybe the race was never against others, but against yesterday’s version of ourselves.</em></p>
         </div>
     </footer>
