--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .author-list {
             font-family: 'Lato', sans-serif;
             font-size: 1.1rem;
-            text-align: center; /* You can adjust this */
+            text-align: center; 
             line-height: 1.6;
             color: #eee; /* Light color to match header */
             margin-top: 10px;
@@ -42,14 +42,9 @@
         <div class="container">
             <h1>The "Comparison Virus": Between Motivation and Misery</h1>
             
-            <h2>Cognitive Resonance</h2>
+            <h2>Team - Cognitive Resonance</h2>
             <p class="author-list">
-                Aryan Arora<br>
-                Kunal Patil<br>
-                Flora<br>
-                Himanshu<br>
-                Prabhanjan<br>
-                Saksham
+                Aryan Arora, Kunal Patil, Flora, Himanshu, Prabhanjan, Saksham
             </p>
             <p class="intro-hook">Since time immemorial, humans have looked to others to gauge their standing. In today's interconnected world, this deep tendency, felt acutely on campus, takes on new significance.</p>
             <p class="intro-define">This 'Comparison Virus' is the pervasive urge to evaluate ourselves against peers in grades, achievements, internships, and social recognition.</p>
